@@ -33,6 +33,7 @@ Uliweb Change Log
         
    so when render the template, the `layout_template` will be replaced with `layout.html`
 #. Add QueryString and query_string support in common.py
+#. Fix dispatch signal process bug
 
 0.1.3 Version
 -----------------
